@@ -1,5 +1,10 @@
 2004-03-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* scm/part-combiner.scm (determine-split-list): split for voice
+	crossings
+
+	* input/regression/part-combine-cross.ly: new file.
+
 	* scm/part-combiner.scm (make-part-combine-music): don't do
 	relative inside partcombine arguments.
 
